--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongodb": "^3.3.0-beta2",
+    "mongoose": "^5.6.9",
+    "morgan": "^1.9.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
@@ -10,6 +17,9 @@
     "react-router-redux": "^4.0.8",
     "react-scripts": "3.0.1",
     "reactstrap": "^8.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.2"
   },
   "scripts": {
     "start": "react-scripts start",
